--- a/src/main/webapp/WEB-INF/pages/main.html
+++ b/src/main/webapp/WEB-INF/pages/main.html
@@ -1,61 +1,30 @@
-<%@ page language="java" contentType="text/html; charset=UTF-8"
-	pageEncoding="UTF-8"%>
-<%@ taglib uri="http://java.sun.com/jsp/jstl/core" prefix="c"%>
-<%@ taglib uri="http://java.sun.com/jsp/jstl/fmt" prefix="fmt"%>
-<%@ taglib uri="customtags" prefix="ctg"%>
-<%@ page import="by.petrovich.storage.entity.User"%>
-<%@ page import="by.petrovich.storage.entity.CncProgram"%>
-<%@ page import="java.util.ArrayList"%>
-<%@ page import="java.util.List"%>
 <!DOCTYPE html>
 <html>
 <head>
 <meta http-equiv="refresh" content="60">
-<meta http-equiv="Content-Type" conАtent="text/html; charset=utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet"
-	href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-<script
-	src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<script
-	src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-<link
-	href="https://fonts.googleapis.com/css?family=Montserrat:400,500,800"
-	rel="stylesheet">
-<link rel="stylesheet" type="text/css"
-	href="<c:url value="/CSS/main.css"/>" />
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<script src="https://kit.fontawesome.com/a076d05399.js"></script>
+<link rel="stylesheet" type="text/css" href="main.css" />
 <meta charset="UTF-8">
 <title>Main page</title>
-<fmt:setLocale value="${sessionScope.local}" />
-<fmt:setBundle basename="properties.local" var="loc" />
-<fmt:message bundle="${loc}" key="local.message" var="message" />
-<fmt:message bundle="${loc}" key="local.locbutton.en" var="en_button" />
-<fmt:message bundle="${loc}" key="local.locbutton.ru" var="ru_button" />
-<fmt:message bundle="${loc}" key="local.locbutton.search"
-	var="search_button" />
-<fmt:message bundle="${loc}" key="local.search_placeholder"
-	var="search_placeholder" />
-<fmt:message bundle="${loc}" key="local.main.navigate.home" var="home" />
-<fmt:message bundle="${loc}" key="local.main.navigate.registration"
-	var="registration" />
-<fmt:message bundle="${loc}" key="local.main.navigate.logIn" var="logIn" />
 </head>
 <body>
 	<nav>
 		<ul>
 			<li class="logo">CNC <span>PROGRAMS STORAGE</span></li>
 			<div class="items">
-				<li><a href="Controller?commandName=go_to_main_page">${home}</a></li>
-				<li><a href="Controller?commandName=go_to_registration_page">${registration}</a></li>
-				<li><a href="Controller?commandName=go_to_log_in_page">${logIn}</a></li>
+				<li><a href="Controller?commandName=go_to_main_page">HOME</a></li>
+				<li><a href="Controller?commandName=go_to_registration_page">registration</a></li>
+				<li><a href="Controller?commandName=go_to_log_in_page">logIn</a></li>
 				<li><a href="Controller?commandName=go_to_admin_page">Admin
 						page</a></li>
 			</div>
 			<li class="search-icon">
 				<form role="search" action="Controller" method="post">
 					<input type="hidden" name="commandName" value="to do" /> <input
-						type="search" placeholder="${search_placeholder}"> <label
-						class="icon"> <span class="fas fa-search"> </span>
+						type="search" placeholder="search..."> <label class="icon">
+						<span class="fas fa-search"> </span>
 					</label>
 				</form>
 			</li>
@@ -65,21 +34,21 @@
 		<form action="Controller" method="post">
 			<input type="hidden" name="commandName" value="change_local" /> <input
 				type="hidden" name="local" value="en" /> <input type="submit"
-				value="${en_button}" class="" />
+				value="en" class="" />
 		</form>
 		<form>
 			<input type="hidden" name="commandName" value="change_local">
 			<input type="hidden" name="local" value="ru"> <input
-				type="submit" value="${ru_button}" class="">
+				type="submit" value="ru" class="">
 		</form>
 	</div>
+
 	<main>
 		<p>
 			<c:out value="${message}" default="test using jstl" />
 		</p>
 		<div class="programInput">
 			<form action="Controller" method="post">
-
 				<table class="programInputTable" cellspacing="0" cellpadding="4">
 					<tr>
 						<td align="right" width="100">number</td>
@@ -128,27 +97,49 @@
 					<hr>
 				</c:when>
 				<c:otherwise>
-					<c:forEach var="user" items="${allUsers}">
-						<table class="table">
-							<col width="50">
-							<col width="30">
-							<col width="50">
-							<thead>
-								<tr>
-									<th>loginPersonnelNumber</th>
-									<th>employeeName</th>
-									<th>email</th>
-								</tr>
-							</thead>
-							<tbody>
-								<tr>
-									<td>${user.getLoginPersonnelNumber()}</td>
-									<td>${user.getEmployeeName()}</td>
-									<td>${user.getEmail()}</td>
-								</tr>
-							</tbody>
-						</table>
-					</c:forEach>
+					<table class="programTable">
+						<col width="150">
+						<thead>
+							<tr>
+								<th>Detail</th>
+								<th>Program number</th>
+								<th>Operation Number</th>
+								<th>Date</th>
+							</tr>
+						</thead>
+						<tbody>
+							<tr>
+								<td>75135H-5454022-10</td>
+								<td>51032411</td>
+								<td>030</td>
+								<td>25.10.2020</td>
+							</tr>
+							<tr>
+								<td>75135H-5454022-10</td>
+								<td>51032411</td>
+								<td>030</td>
+								<td>25.10.2020</td>
+							</tr>
+							<tr>
+								<td>75135H-5454022-10</td>
+								<td>51032411</td>
+								<td>030</td>
+								<td>25.10.2020</td>
+							</tr>
+							<tr>
+								<td>75135H-5454022-10</td>
+								<td>51032411</td>
+								<td>030</td>
+								<td>25.10.2020</td>
+							</tr>
+							<tr>
+								<td>75135H-5454022-10</td>
+								<td>51032411</td>
+								<td>030</td>
+								<td>25.10.2020</td>
+							</tr>
+						</tbody>
+					</table>
 					<form action="yourservlet" method="post">
 						<input type="hidden" name="firstrow" value="${firstrow}">
 						<input type="hidden" name="rowcount" value="${rowcount}">
@@ -163,7 +154,12 @@
 	<!-- Here is the main footer that is used across all the pages of website with using customTag writing -->
 	<footer>
 		<div class="footer">
-			<ctg:footer />
+			<p>
+				EPAM Java Web Development Training | WEB APP TASK | &copy Copyright
+				by <a
+					href=https://www.linkedin.com/in/alexandr-petrovich-java-developer>
+					Petrovich Alexandr</a> , 2021-2022
+			</p>
 		</div>
 	</footer>
 </body>
